# newext

./: CMakeLists.txt  README.md
cmake/: SetDefinitions.cmake
dep/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  map-extractor.rc
src/bfparser/: MPQArchives.cpp  MPQArchives.h  README  mpqstream.h
src/map-extractor/: ADTConverter.cpp  ArchiveSet.cpp  ArchiveSet.h  ChunkParser.cpp  DBCFile.cpp  DBCFile.h  DBFile.cpp  Extractor.cpp  FileListFeeder.cpp  FileListFeeder.h  MPQStream.cpp  MPQStream.h  Main.cpp  Utils.cpp  Utils.h  WDTFile.cpp
src/map-extractor/include/: ADTFile.h  ArchiveSet.h  ChunkParser.h  DBCFile.h  DBFile.h  Extractor.h  MDFile.h  MPQStream.h  TypeDefines.h  Utils.h  WDTFile.h  WMOFile.h
